<resources>
    <string name="app_name">CardOj</string>
    <string name="data_da_intimacao">data da intimacao</string>
    <string name="enderenco">Enderenço</string>
    <string name="nome_da_parte">Nome da Parte</string>
    <string name="numero_do_processo">Numero do processo</string>
    <string name="prazos">Prazos</string>
    <string name="cumprir">Cumprir</string>
    <string name="visualizar">Visualizar</string>
    <string name="distribuir">Distribuir</string>
    <string name="mandado">0</string>
    <string name="mandador">Mandador</string>
</resources>