<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textNumero_Processo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_do_processo" />

            <TextView
                android:id="@+id/textNome_Parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_parte" />

            <TextView
                android:id="@+id/textEnderenco_Parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enderenco" />

            <TextView
                android:id="@+id/textData_Expediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_da_intimacao" />

            <TextView
                android:id="@+id/textPrazo_Expediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prazos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_visualizacao_cinza_24"
                android:text="@string/visualizar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_cumprirl_24"
                android:text="@string/distribuir" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
