<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="#0D5BDF"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textNumero_processo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_do_processo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textNome_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_da_parte" />

            <TextView
                android:id="@+id/textEnderenco_parte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enderenco" />

            <TextView
                android:id="@+id/textData_intimacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_da_intimacao" />

            <TextView
                android:id="@+id/textPrazos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prazos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonVisualizar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#032AF3"
                android:drawableStart="@drawable/ic_visualizacao_cinza_24"
                android:text="@string/visualizar"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonCumprir"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#032AF3"
                android:drawableStart="@drawable/ic_cumprirl_24"
                android:text="@string/cumprir"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>